--- a/src/app/pages/admin-resoluciones/expedir-cancelacion/expedir-cancelacion.component.html
+++ b/src/app/pages/admin-resoluciones/expedir-cancelacion/expedir-cancelacion.component.html
@@ -3,7 +3,7 @@
         <div class="adminVinc-title">
             <h2>Información de Cancelación</h2>
         </div>
-        <h2 class="section-title">Docentes a vincular</h2>
+        <h2 class="section-title">Docentes a desvincular</h2>
         <ng2-smart-table [settings]="adminCancelacionsettings" [source]="adminCancelacionData">
         </ng2-smart-table>
     </div>
