--- a/src/app/pages/gestion-vinculaciones/modal-adiciones/modal-adiciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/modal-adiciones/modal-adiciones.component.html
@@ -31,7 +31,7 @@
             <mat-form-field class="form-field-modal">
                 <mat-label>fecha de inicio válida</mat-label>
                 <mat-datepicker #fechaPicker ></mat-datepicker>
-                <input matInput [matDatepicker]="fechaPicker" name="fechaInit" #fechaInit="ngModel" [(ngModel)]="cambioVinculacion.FechaInicio" (dateInput)="calcularSemanas()" required>
+                <input matInput [matDatepickerFilter]="filtrarDias" [matDatepicker]="fechaPicker" name="fechaInit" #fechaInit="ngModel" [(ngModel)]="cambioVinculacion.FechaInicio" (dateInput)="calcularSemanas()" required>
                 <mat-datepicker-toggle matSuffix [for]="fechaPicker"></mat-datepicker-toggle>
             </mat-form-field>
             <button mat-button class="button button-add" type="button" (click)="mostrarDisponibilidad()">Cambiar disponibilidad</button>
