--- a/src/app/pages/gestion-vinculaciones/tablas-disponibilidades/tablas-disponibilidades.component.html
+++ b/src/app/pages/gestion-vinculaciones/tablas-disponibilidades/tablas-disponibilidades.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list class="selector" cols="2" rowHeight="450px">
+<mat-grid-list class="selector" [appOasGridCols]="{xs: 1, sm: 1, md: 1, lg: 2, xl: 2}" rowHeight="18rem">
     <mat-grid-tile>
         <ng2-smart-table
             [settings]="disponibilidadesSettings"
