--- a/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
@@ -22,12 +22,13 @@
             <form #cform="ngForm" novalidate>
                 <mat-form-field class="form-field-column" *ngIf="resolucionVinculacion.NivelAcademico === 'PREGRADO'">
                     <mat-label>Numero de semanas a reversar:</mat-label>
-                    <input matInput type="number" min="0" [(ngModel)]="numeroSemanas" name="semanas" #semanas="ngModel" required >
+                    <input matInput type="number" min="0" max="{{semanasMaximo}}" [(ngModel)]="numeroSemanas" name="semanas" #semanas="ngModel" required >
                 </mat-form-field>
                 <mat-form-field class="form-field-column" *ngIf="resolucionVinculacion.NivelAcademico === 'POSGRADO'">
                     <mat-label>Numero de horas semestrales a reversar:</mat-label>
                     <input matInput type="number" min="0" [(ngModel)]="numeroHorasSemestrales" name="horasSem" #horasSem="ngModel" required >
                 </mat-form-field>
+                <p style="color: red">Número máximo de semanas sugerido: {{semanasMaximo}}</p>
                 <mat-expansion-panel *ngFor="let v of cambioVinculacion; let i=index" hideToggle disabled>
                     <mat-expansion-panel-header>
                         <mat-panel-title class="cancelacion-panel">
