--- a/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
@@ -13,6 +13,7 @@
                 [settings]="vinculacionesSettings"
                 [source]="vinculacionesData"
                 (userRowSelect)="seleccionarVinculaciones($event)"
+                #table
             ></ng2-smart-table>
         </fieldset>
         <fieldset class="form-container" *ngIf="cambioVinculacion.length > 0">
