--- a/src/app/pages/gestion-vinculaciones/modal-reducciones/modal-reducciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/modal-reducciones/modal-reducciones.component.html
@@ -39,6 +39,10 @@
                 <input matInput [matDatepickerFilter]="filtrarDias" [matDatepicker]="fechaPicker" name="fechaInit" #fechaInit="ngModel" [(ngModel)]="cambioVinculacion.FechaInicio" (dateInput)="calcularSemanas()" required >
                 <mat-datepicker-toggle matSuffix [for]="fechaPicker"></mat-datepicker-toggle>
             </mat-form-field>
+            <mat-form-field class="form-field-modal" *ngIf="posgrado">
+                <mat-label>Horas trabajadas</mat-label>
+                <input matInput type="number" name="horasTra" #horasRed="ngModel" [(ngModel)]="cambioVinculacion.NumeroHorasTrabajadas" required>
+            </mat-form-field>
         </mat-grid-tile>
     </mat-grid-list>
     <p style="color: red">Número máximo de semanas sugerido: {{semanasMaximo}}</p>
