--- a/src/app/pages/gestion-vinculaciones/rp-vinculaciones/rp-vinculaciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/rp-vinculaciones/rp-vinculaciones.component.html
@@ -13,7 +13,7 @@
                 [settings]="vinculacionesSettings"
                 [source]="vinculacionesData"
             ></ng2-smart-table>
-            <button mat-button class="button button-submit" type="button" (click)="guardar()">Guardar</button>
+            <button mat-button class="button button-submit" type="button" (click)="guardar()" [disabled]="!guardarRp">Guardar</button>
         </fieldset>
         <button mat-button class="button button-remove" type="button" (click)="volver()">Volver</button>
     </mat-card-content>
