fix: Rps correctos en cancelaciones

--- a/src/app/pages/gestion-vinculaciones/modal-reducciones/modal-reducciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/modal-reducciones/modal-reducciones.component.html
@@ -15,13 +15,8 @@
                 <input matInput type="text" name="horasTot" #horasTot="ngModel" [(ngModel)]="horasTotales" disabled>
             </mat-form-field>
             <mat-form-field class="form-field-modal">
-                <mat-label>Registro presupuestal</mat-label>
-                <mat-select [(ngModel)]="cambioVinculacion.DocPresupuestal" name="rp" #rp="ngModel">
-                    <mat-option>--Seleccionar--</mat-option>
-                    <mat-option *ngFor="let rp of registrosPresupuestales" [value]="rp">
-                        Registro presupuestal {{rp.Consecutivo}} - {{ rp.Vigencia }}
-                    </mat-option>
-                </mat-select>
+                <mat-label>Registro Presupuestal</mat-label>
+                <input matInput type="text" name="rp" #rp="ngModel" [(ngModel)]="cambioVinculacion.VinculacionOriginal.RegistroPresupuestal" disabled>
             </mat-form-field>
         </mat-grid-tile>
         <mat-grid-tile>
