--- a/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
@@ -27,21 +27,12 @@
                 </mat-form-field>
                 <p style="color: red">Número máximo de semanas sugerido: {{semanasMaximo}}</p>
                 <mat-expansion-panel *ngFor="let v of cambioVinculacion; let i=index" hideToggle disabled>
-                    <mat-expansion-panel-header>
+                    <mat-expansion-panel-header [collapsedHeight]="'auto'" [expandedHeight]="'auto'">
                         <mat-panel-title class="cancelacion-panel">
-                            <strong>{{i + 1}}. {{v.VinculacionOriginal.PersonaId}} - {{v.VinculacionOriginal.Nombre}} - {{v.VinculacionOriginal.NumeroHorasSemanales}} Horas {{ resolucionVinculacion.NivelAcademico === 'PREGRADO' ? 'semanales' : 'semestrales'}}</strong>
-                            <mat-form-field class="form-field-exp">
-                                <mat-label>Registro presupuestal</mat-label>
-                                <mat-select [(ngModel)]="v.DocPresupuestal" name="rp_{{i}}" #rp_{{i}}="ngModel" >
-                                    <mat-option>--Seleccionar--</mat-option>
-                                    <mat-option  *ngFor="let rp of registrosPresupuestales[v.VinculacionOriginal.PersonaId]" [value]="rp">
-                                        Registro presupuestal {{rp.Consecutivo}} - {{ rp.Vigencia }}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                            <mat-form-field class="form-field-column" *ngIf="resolucionVinculacion.NivelAcademico === 'POSGRADO'">
+                            <strong>{{i + 1}}. {{v.VinculacionOriginal.PersonaId}} - {{v.VinculacionOriginal.Nombre}} - {{v.VinculacionOriginal.NumeroHorasSemanales}} Horas {{ resolucionVinculacion.NivelAcademico === 'PREGRADO' ? 'semanales' : 'semestrales'}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Registro Presupuestal: {{v.VinculacionOriginal.RegistroPresupuestal}}</strong>
+                            <mat-form-field [style.width.px]=200 class="form-field-column" *ngIf="resolucionVinculacion.NivelAcademico === 'POSGRADO'">
                                 <mat-label>Numero de horas a reversar:</mat-label>
-                                <input matInput type="number" min="0" [(ngModel)]="v.NumeroHorasSemanales" name="horasSem" #horasSem="ngModel" required >
+                                <input matInput type="number" [(ngModel)]="v.NumeroHorasSemanales" name="horasSem" #horasSem="ngModel" required >
                             </mat-form-field>
                         </mat-panel-title>
                     </mat-expansion-panel-header>
