fix: Permite edicion de numero resolucion #160

--- a/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
+++ b/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
@@ -5,7 +5,7 @@
                 <h2 class="section-title">Formato de la Resolución</h2>
                 <mat-form-field class="form-field-column" *ngIf="!esPlantilla">
                     <mat-label>Numero de resolucion</mat-label>
-                    <input matInput type="number" name="NumeroResolucion" [(ngModel)]="contenidoResolucion.Resolucion.NumeroResolucion" disabled>
+                    <input matInput type="number" name="NumeroResolucion" [(ngModel)]="contenidoResolucion.Resolucion.NumeroResolucion">
                 </mat-form-field>
                 <mat-form-field class="form-field-column">
                     <mat-label>Nivel académico</mat-label>
