--- a/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
@@ -15,6 +15,9 @@
                 (userRowSelect)="seleccionarVinculaciones($event)"
                 #table
             ></ng2-smart-table>
+            <mat-error *ngIf="!habilitado">
+                No es posible realizar la cancelación debido a que el docente aún no tiene RP
+            </mat-error>
         </fieldset>
         <fieldset class="form-container" *ngIf="cambioVinculacion.length > 0">
             <legend>
