feat: #196 tips para el usuario
se agregan tips en campos para los modales de expedición, adiciones, reducciones

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -60,3 +60,13 @@
         }
     }
 }
+
+::ng-deep {
+    .mat-tooltip {
+        font-size: 1em;
+        text-align: justify;
+        background-color: var(--primary);
+        position: absolute;
+        width: 200px;
+    }
+}
