feat: udistrital/resoluciones_cliente_v2#225
se adapta reporte de resoluciones por docente para rol ADMIN_DOCENCIA

--- a/src/app/pages/gestion-resoluciones/consulta-docente/consulta-docente.component.html
+++ b/src/app/pages/gestion-resoluciones/consulta-docente/consulta-docente.component.html
@@ -16,6 +16,6 @@
             [source]="resolucionesDocenteData"
             (custom)="eventHandler($event)"
         ></ng2-smart-table>
-        <button mat-button class="button button-remove" type="button" (click)="volver()">Volver</button>
+        <button *ngIf="isAdmin" mat-button class="button button-remove" type="button" (click)="volver()">Volver</button>
     </mat-card-content>
 </mat-card>
