--- a/src/app/pages/gestion-vinculaciones/vincular-docentes/vincular-docentes.component.html
+++ b/src/app/pages/gestion-vinculaciones/vincular-docentes/vincular-docentes.component.html
@@ -15,7 +15,7 @@
                 (userRowSelect)="seleccionarDocentes($event)"
                 #table
             ></ng2-smart-table>
-            <button mat-button class="button button-submit" type="button" (click)="abrirModalDisponibilidad()" [disabled]="docentesSeleccionados.length === 0">Seleccionar disponibilidad</button>
+            <button mat-button class="button button-submit" type="button" (click)="abrirModalDisponibilidad()" [disabled]="seleccionCount === 0">Seleccionar disponibilidad</button>
         </fieldset>
         <fieldset class="form-container">
             <legend>
