feat: add DashboardProgreso component and integrate into RpVinculaciones

--- a/src/app/pages/gestion-vinculaciones/rp-vinculaciones/rp-vinculaciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/rp-vinculaciones/rp-vinculaciones.component.html
@@ -26,9 +26,7 @@
       >
         {{ isFinalized ? 'Guardado' : 'Guardar' }}
       </button>
-    </fieldset>
-
-    <button
+          <button
       mat-button
       class="button button-remove"
       type="button"
@@ -36,5 +34,8 @@
     >
       Volver
     </button>
+    </fieldset>
+    <hr class="divider" />
+    <app-dashboard-progreso [resolucionId]="resolucionId"></app-dashboard-progreso>
   </mat-card-content>
 </mat-card>
